--- a/attribute_set/views/attribute_attribute_view.xml
+++ b/attribute_set/views/attribute_attribute_view.xml
@@ -94,7 +94,7 @@
                     </group>
                     <group col="4" colspan="4">
                         <field name="option_ids" string="Attribute Options" colspan="4">
-                            <tree editable="top">
+                            <list editable="top">
                                 <field
                                     name="relation_model_id"
                                     column_invisible="True"
@@ -105,7 +105,7 @@
                                     name="name"
                                     invisible="relation_model_id and not value_ref"
                                 />
-                            </tree>
+                            </list>
                         </field>
                     </group>
                 </group>
@@ -116,7 +116,7 @@
         <field name="name">attribute.attribute.tree</field>
         <field name="model">attribute.attribute</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field
                     name="sequence"
                     widget="handle"
@@ -127,7 +127,7 @@
                 <field name="attribute_group_id" />
                 <field name="attribute_set_ids" widget="many2many_tags" />
                 <field name="nature" />
-            </tree>
+            </list>
         </field>
     </record>
     <record id="view_attribute_attribute_search" model="ir.ui.view">
@@ -143,7 +143,7 @@
     <record id="attribute_attribute_form_action" model="ir.actions.act_window">
         <field name="name">Attributes</field>
         <field name="res_model">attribute.attribute</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="search_view_id" ref="view_attribute_attribute_search" />
         <field name="context">{}</field>
         <field name="help" />
@@ -151,7 +151,7 @@
     <record id="attribute_attribute_sort_action" model="ir.actions.act_window">
         <field name="name">Attributes</field>
         <field name="res_model">attribute.attribute</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="search_view_id" ref="view_attribute_attribute_search" />
         <field name="context">
             {"search_default_attribute_group_id": id, "active_attribute_sort":
