--- a/attribute_set/views/attribute_group_view.xml
+++ b/attribute_set/views/attribute_group_view.xml
@@ -14,7 +14,7 @@
     <record id="attribute_group_tree_view" model="ir.ui.view">
         <field name="model">attribute.group</field>
         <field name="arch" type="xml">
-            <tree editable="bottom">
+            <list editable="bottom">
                 <field name="sequence" widget="handle" />
                 <field name="name" />
                 <field
@@ -27,7 +27,7 @@
                     type="action"
                     icon="fa-sort-amount-asc"
                 />
-            </tree>
+            </list>
         </field>
     </record>
     <record id="attribute_group_search_view" model="ir.ui.view">
@@ -41,7 +41,7 @@
     <record id="attribute_group_action" model="ir.actions.act_window">
         <field name="name">Attribute Groups</field>
         <field name="res_model">attribute.group</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="search_view_id" ref="attribute_group_search_view" />
         <field name="context">{}</field>
         <field name="help" />
