--- a/attribute_set/views/attribute_option_view.xml
+++ b/attribute_set/views/attribute_option_view.xml
@@ -41,7 +41,7 @@
         </field>
     </record>
     <record id="attribute_option_tree_view" model="ir.ui.view">
-        <field name="name">attribute.option.tree</field>
+        <field name="name">attribute.option.list</field>
         <field name="model">attribute.option</field>
         <field eval="20" name="priority" />
         <field name="arch" type="xml">
