--- a/pim/views/attribute_attribute.xml
+++ b/pim/views/attribute_attribute.xml
@@ -3,7 +3,7 @@
     <record id="attribute_attribute_form_action" model="ir.actions.act_window">
         <field name="name">Product Attribute</field>
         <field name="res_model">attribute.attribute</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field
             name="search_view_id"
             ref="attribute_set.view_attribute_attribute_search"
