--- a/pim/views/pim_view.xml
+++ b/pim/views/pim_view.xml
@@ -5,7 +5,7 @@
     <record id="product_attribute_value_action" model="ir.actions.act_window">
         <field name="name">Product Attribute Values</field>
         <field name="res_model">product.attribute.value</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
     <menuitem
         id="root_menu_pim"
