--- a/pim/views/product_attribute_value.xml
+++ b/pim/views/product_attribute_value.xml
@@ -3,10 +3,10 @@
     <record id="product_attribute_value_view_form" model="ir.ui.view">
         <field name="model">product.attribute.value</field>
         <field name="arch" type="xml">
-            <tree editable="top">
+            <list editable="top">
                 <field name="attribute_id" />
                 <field name="name" />
-            </tree>
+            </list>
         </field>
     </record>
 </odoo>
