--- a/pim/views/product_view.xml
+++ b/pim/views/product_view.xml
@@ -3,11 +3,11 @@
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 <odoo>
     <record id="pim_product_template_tree_view" model="ir.ui.view">
-        <field name="name">pim.product.template.product.tree</field>
+        <field name="name">pim.product.template.product.list</field>
         <field name="model">product.template</field>
         <field name="priority">90</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="sequence" widget="handle" />
                 <field
                     name="image_512"
@@ -26,7 +26,7 @@
                     groups="uom.group_uom"
                 />
                 <field name="attribute_set_id" />
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -34,7 +34,7 @@
     <record id="product_template_action" model="ir.actions.act_window">
         <field name="name">Products</field>
         <field name="res_model">product.template</field>
-        <field name="view_mode">tree,kanban,form</field>
+        <field name="view_mode">list,kanban,form</field>
         <field name="view_id" ref="pim.pim_product_template_tree_view" />
         <field
             name="context"
